revise text and image re: the mountain

--- a/source/vineyards.html.erb
+++ b/source/vineyards.html.erb
@@ -14,9 +14,11 @@ title: "The Place"
 <%= image_tag 'place/tractor.jpg', :class => 'w-100' %>
 
 <section class="mv5 mw8 center">
+
+  <%= image_tag 'place/napa-map.jpg', :class => 'w-100' %>
   <div class="center measure">
     <h2 class="normal mt5 mb0">The Mountain</h2>
-    <p class="lh-copy">Something about how Randy was instrumental is helping create the first sub AVA in Napa and using his plane to survey the area.</p>
+    <p class="lh-copy">Recognizing the distinctiveness of the wines from Howell Mountain, Randy and some of the other winemakers sought to have the region recogized as a specific sub-region of Napa. Randy photographed the area from his plane and they submitted the application in 1981. In 1983, Howell Mountain became the first sub appelation of the Napa AVA.
   </div>
 </section>
 
