tweaking layout of main image

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,5 @@
-<section class="w-100">
-<%= image_tag 'home/home.jpg', :class => '' %>
+<section class="w-100 tc">
+<%= image_tag 'home/home.jpg', :class => 'w-100' %>
 </section>
 
 
