--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -1,33 +1,29 @@
 ---
 title: "The Wine" 
+hero: "wine/wines-slider.jpg"
+
 ---
 
-<img src="/images/wine/wines-slider.jpg" class="w-100">
-  <section class="pv5">
-<blockquote class="mb5 measure center">
-  <p class="lh-copy mb0"><i>Nothing is easygoing about Randy Dunn's Cabernets, whether it's the dense red wax atop the bottle you need to soften to access the cork, or the uncompromising style that has become his trademark. &hellip; The quietly fierce nature of Dunn's wines has never been for all comers. But Dunn has always prided himself on being different.</i></p>
-  <cite class="f5 ttu tracked tr db fr"> &mdash; Jon Bonné</cite>
-</blockquote>
+<section class="mt0 mb5">
+  <blockquote class="mt0 mb4 measure center cf">
+    <p class="lh-copy mt0 mb0"><i>Nothing is easygoing about Randy Dunn's Cabernets, whether it's the dense red wax atop the bottle you need to soften to access the cork, or the uncompromising style that has become his trademark. &hellip; The quietly fierce nature of Dunn's wines has never been for all comers. But Dunn has always prided himself on being different.</i></p>
+    <cite class="f5 ttu tracked tr db fr"> &mdash; Jon Bonné</cite>
+  </blockquote>
 
-
-
-<blockquote class="mb4 measure center">
-<p class="lh-copy i mb0">"The mountain really determined the style of the wine. It became obvious right away that the grapes up here were much more powerful than down on the valley floor. I just made the wine itself the same way we did at Caymus, it just was a more tannic wine due to the place."</p>
-  <cite class="f5 ttu tracked tr db fr"> &mdash; Randy Dunn</cite>
-</blockquote>
+  <blockquote class="mt0 mb0 measure center cf">
+    <p class="lh-copy i mb0">"The mountain really determined the style of the wine. It became obvious right away that the grapes up here were much more powerful than down on the valley floor. I just made the wine itself the same way we did at Caymus, it just was a more tannic wine due to the place."</p>
+    <cite class="f5 ttu tracked tr db fr"> &mdash; Randy Dunn</cite>
+  </blockquote>
 
 <!-- <p class="lh-copy measure center">Both of our wines are produced in the same classic way we've done it since 1979.</p> -->
 </section>
 
-<section class="w-100 mt2">
 <%= image_tag 'wine/vineyard.jpg', :class => 'w-100' %>
-</section>
 
-
-<section class="center pv5 cf" style="max-width: 1180px;">
-	<div class="w-100 center cf">
-		<div class="fl w-100 w-50-l ph4 mb4-l">
-			<h2 class="normal mt4 tc">Howell Mountain Cabernet</h2>
+<section class="mv5">
+	<div class="mw8 center cf mb4">
+		<div class="fl w-100 w-50-l ph4">
+			<h2 class="normal mt0 tc">Howell Mountain Cabernet</h2>
       <!--  <p class="i mt0">Napa Valley: Howell Mountain AVA</p> -->
       <p class="lh-copy measure" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that it is hand dipped in red wax.</p>
 			<p class="tc"><%= link_to  'Tasting notes', 'tasting-notes.html', :class => 'dark-blue link underline-hover' %></p>
@@ -35,27 +31,28 @@ title: "The Wine"
 		</div>
 
 		<div class="fl w-100 w-50-l ph4">
-			<h2 class="normal mt4 tc">Napa Valley Cabernet</h2>
+			<h2 class="normal mt0 tc">Napa Valley Cabernet</h2>
 			<p class="lh-copy measure">The Napa Valley wines are a blend of our Howell Mountain fruit and a small quantity of fruit that we purchase from two growers in Coombsville. This valley floor fruit contributes to the wine’s earlier approachability and softer tannic structure.</p>
 			<p class="tc"><%= link_to  'Tasting notes', 'tasting-notes.html', :class => 'dark-blue link underline-hover' %></p>
 		</div>
     </div>
-      <p class="lh-copy measure center tc">Both of our wines are 100% Cabernet Sauvignon aged 32 months in 100% new French oak.</p>
+      <p class="lh-copy measure-narrow center tc">Both of our wines are 100% Cabernet Sauvignon aged 32 months in 100% new French oak.</p>
 </section>
 
    <img src="/images/wine/89-howell.jpg" class="w-100">
 
-<section class="mv5">
-	<div class="w-100 center cf">
-		<div class="fl w-100 w-50-l ph4">
-			<h2 class="normal mt4">Availability</h2>
-      <p class="lh-copy measure">The wines are offered to our mailing list every fall. Please contact <%= mail_to 'erin@dunnvineyards.com', "Erin", :class => 'dark-blue link underline-hover' %> for any mailing list inquiries. The wines also are available in select retail and restaurant locations across the country.</p>
-		</div>
-		<div class="fl w-100 w-50-l ph4">
-			<h2 class="normal mt4">Library Wines</h2>
-			<p class="lh-copy measure">We are committed to maintaining a library of all the vintages we have produced. While these wines are not available, we do release older vintages of wine to our mailing list on a regular basis.</p>
-		</div>
-	</div>
-</section>
+   <section class="mv5">
+     <div class="mw8 center cf">
+       <div class="fl w-100 w-50-l ph4">
+         <h2 class="normal mt0 tc">Availability</h2>
+         <p class="lh-copy measure mb0">The wines are offered to our mailing list every fall. Please contact <%= mail_to 'erin@dunnvineyards.com', "Erin", :class => 'dark-blue link underline-hover' %> for any mailing list inquiries. The wines also are available in select retail and restaurant locations across the country.</p>
+       </div>
+       <div class="fl w-100 w-50-l ph4">
+         <h2 class="normal mt0 tc">Library Wines</h2>
+         <p class="lh-copy measure mb0">We are committed to maintaining a library of all the vintages we have produced. While these wines are not available, we do release older vintages of wine to our mailing list on a regular basis.</p>
+       </div>
+     </div>
+   </section>
+
 <%= image_tag 'wine/vertical.jpg', :class => 'w-100' %>
 
