--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,12 +1,7 @@
-<section class="w-100 tc">
-<%= image_tag 'home/home.jpg', :class => 'w-100' %>
-</section>
+---
+hero: "home/home.jpg" 
+---
 
-
-<section class="mw8 center mv6">
-<p class="measure lh-copy tc mv5 center i f3">Since 1979, Randy and Lori Dunn and family have owned and operated Dunn Vineyards and continue to produce one of the most highly acclaimed Cabernet Sauvignons from Howell Mountain and the Napa Valley.</p>
-</section>
-
-<section class="w-100">
-<%= image_tag 'wine/vertical.jpg', :class => '' %>
+<section class="mw8 center mv5">
+  <p class="measure lh-copy tc mt0 mb0 center i f3">Since 1979, Randy and Lori Dunn and family have owned and operated Dunn Vineyards and continue to produce one of the most highly acclaimed Cabernet Sauvignons from Howell Mountain and the Napa Valley.</p>
 </section>
