page name changes

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -34,9 +34,9 @@
       <% end %>
       <nav class="fr" style="line-height: 72px;">
         <%= link_to  'The Wine', 'wines.html', :class => 'dark-blue link dim ph3' %>
-        <%= link_to  'The Place', 'vineyards.html', :class => 'dark-blue link dim ph3' %>
+        <%= link_to  'The Place', 'place.html', :class => 'dark-blue link dim ph3' %>
         <%= link_to  'The Family', 'family.html', :class => 'dark-blue link dim ph3' %>
-        <%= link_to  'The Story', 'history.html', :class => 'dark-blue link dim ph3' %>
+        <%= link_to  'The Story', 'story.html', :class => 'dark-blue link dim ph3' %>
         <!-- <%= link_to  'Contact', 'contact.html', :class => 'dark-blue link dim ph3' %> -->
       </nav>
     </header>
