--- a/source/_footer.erb
+++ b/source/_footer.erb
@@ -4,9 +4,9 @@
 
     <%= link_to 'Home', 'index.html', :class => 'dib dark-blue link dim pr3' %>
     <%= link_to 'The Wine', 'wines.html', :class => 'dib dark-blue link dim pr3' %>
-    <%= link_to 'The Place', 'vineyards.html', :class => 'di dark-blue link dim pr3' %>
+    <%= link_to 'The Place', 'place.html', :class => 'di dark-blue link dim pr3' %>
     <%= link_to 'The Family', 'family.html', :class => 'di dark-blue link dim pr3' %>
-    <%= link_to 'The Story', 'history.html', :class => 'di dark-blue link dim' %>
+    <%= link_to 'The Story', 'story.html', :class => 'di dark-blue link dim' %>
     <div class="mt4">
       <%= link_to 'Contact Us', 'contact.html', :class => 'di dark-blue link dim' %>
     </div>
@@ -17,29 +17,3 @@
   </div>
 </footer>
 
-
-
-<!-- 
-<div class="bg-washed-yellow pa4 mt5">
-   
-  <p class="i">Links to 0ther pages</p>
-
-<h3>Non-primary pages</h3>
-<ul>
-  <li><%= link_to  'Tasting Notes', 'wines/tasting-notes.html', :class => 'dark-blue link dim' %></li>
-  <li><%= link_to  'How to Remove Wax', 'wines/how-to-remove-wax.html', :class => 'dark-blue link dim' %></li>
-  <li><%= link_to  'Napa Land Trust', 'napa-land-trust.html', :class => 'dark-blue link dim' %></li>
-</ul>
-
-<h3>Pages that will go away</h3>
-<ul>
-  <li><%= link_to  'About', 'about.html', :class => 'dark-blue link dim' %>
-  <li><%= link_to  'Philsophy', 'philosophy.html', :class => 'dark-blue link dim' %></li>
-  <li><%= link_to  'Howell Mountain', 'wines/howell-mountain.html', :class => 'dark-blue link dim' %>
-  <li><%= link_to  'Napa Valley', 'wines/napa-valley.html', :class => 'dark-blue link dim' %></li>
-  <li><%= link_to  'Library Wines', 'wines/library-wines.html', :class => 'dark-blue link dim' %></li>
-  <li><%= link_to  'Press', 'press.html', :class => 'dark-blue link dim' %></li>
-  <li><%= link_to  'A Year at Dunn', 'year-at-dunn.html', :class => 'dark-blue link dim' %></li>
-</ul>
-</div>
--->
