--- a/source/_footer.erb
+++ b/source/_footer.erb
@@ -2,13 +2,13 @@
 <footer class="mt5">
   <div class="mw8 center tc">    
 
-    <%= link_to 'Home', 'index.html', :class => 'dib dark-blue link dim pr3' %>
-    <%= link_to 'The Wine', 'wines.html', :class => 'dib dark-blue link dim pr3' %>
-    <%= link_to 'The Place', 'place.html', :class => 'di dark-blue link dim pr3' %>
-    <%= link_to 'The Family', 'family.html', :class => 'di dark-blue link dim pr3' %>
-    <%= link_to 'The Story', 'story.html', :class => 'di dark-blue link dim' %>
+    <%= link_to 'Home', '/', :class => 'dib dark-blue link dim pr3' %>
+    <%= link_to 'The Wine', 'wines', :class => 'dib dark-blue link dim pr3' %>
+    <%= link_to 'The Place', 'place', :class => 'di dark-blue link dim pr3' %>
+    <%= link_to 'The Family', 'family', :class => 'di dark-blue link dim pr3' %>
+    <%= link_to 'The Story', 'story', :class => 'di dark-blue link dim' %>
     <div class="mt4">
-      <%= link_to 'Contact Us', 'contact.html', :class => 'di dark-blue link dim' %>
+      <%= link_to 'Contact Us', 'contact', :class => 'di dark-blue link dim' %>
     </div>
     <div class="mt4">
     <%= partial 'social' %>
