--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -33,11 +33,10 @@
         <%= image_tag 'logo.png', :class => "pl1", :height => "72" %>
       <% end %>
       <nav class="fr" style="line-height: 72px;">
-        <%= link_to  'The Wine', 'wines.html', :class => 'dark-blue link dim ph3' %>
-        <%= link_to  'The Place', 'place.html', :class => 'dark-blue link dim ph3' %>
-        <%= link_to  'The Family', 'family.html', :class => 'dark-blue link dim ph3' %>
-        <%= link_to  'The Story', 'story.html', :class => 'dark-blue link dim ph3' %>
-        <!-- <%= link_to  'Contact', 'contact.html', :class => 'dark-blue link dim ph3' %> -->
+        <%= link_to  'The Wine', 'wines', :class => 'dark-blue link dim ph3' %>
+        <%= link_to  'The Place', 'place', :class => 'dark-blue link dim ph3' %>
+        <%= link_to  'The Family', 'family', :class => 'dark-blue link dim ph3' %>
+        <%= link_to  'The Story', 'story', :class => 'dark-blue link dim ph3' %>
       </nav>
     </header>
 
