revised family page, added photos

--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -1,21 +1,28 @@
 ---
 title: "The Family" 
+hero: "family/fam-os.jpg"
 ---
 
-<h2 class="normal mt5">The Dunns</h2>
-	<img src="https://i2.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Dunn-Family2.jpg">
+
+<section class="mv5 mw8 center">
+  
+  <div class="center pv3 cf mw8">
+    <div class="w-100 center cf">
+      
+      <div class="fl w-100 w-50-l ph4 mb4-l">
+
 
 <h3 class="normal mt5">Randy Dunn</h3>
-<img src="https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Randy.jpg">
+<%= image_tag ' family/randy-os.jpg', :class => 'w-100' %>
 <p class="lh-copy measure">Founder, farmer, activist and winemaking pioneer of Howell Mountain. Randy started his wine career working for Charlie Wagner as the first enologist for Caymus Vineyards. He went on to make wine for Livingston, La Jota, Pahlmeyer and Palmaz to name a few. He currently makes the Feather wine with the Long Shadows project in Walla Walla, Washington. An avid pilot, mountain biker and nuisance to any hillside developer, he is happy to be called a dirt loving hippie, but you’d probably think he’s more of a cowboy.</p> 
 
 
 <h3 class="normal mt5">Lori Dunn</h3>
-<img src="https://i2.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Lori.jpg">
+<%= image_tag ' family/lori-os.jpg', :class => 'w-100' %>
 <p class="lh-copy measure">Founder and the “real centerfold” of the enterprise, Lori prepared hearty meals for the family, took care of the house, the horses… oh and the kids. She managed the vineyard accounting as well as the customer orders. She labeled and waxed the bottles, packaged the wine for shipping and really any other thing that needed tending to. Today Lori loves spending time with her grand kids, quilting relaxing at her oasis on Bodega Bay, and making sure that her gardens meet her Master Gardner specifications.</p>
 
 <h3 class="normal mt5">Mike Dunn</h3>
-<img src="https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/mike2.jpg">
+<%= image_tag ' family/mike-os.jpg', :class => 'w-100' %>
 <p class="lh-copy measure">The self proclaimed “Cellar Grunt”. Mike graduated from UC Santa Barbara in 1988 with a degree in Anthropology (surfing). Mike returned to the winery in 1999 after operating a retail bike shop in Calistoga. Today he oversees production of the wine, works with the team in the vineyards, and generally manages the overall operation. He and his wife Kara started their label Retro Cellars in 2003 with the purchase of some old vine Petite Sirah from Randy. Their two grown children are currently on their own paths, but if their father is an example, they could still end up farming grapes on Howell Mountain.</p>
 
 
@@ -23,7 +30,7 @@ title: "The Family"
 <p class="lh-copy measure">It is safe to say, that we are who we are today because of the love Jenny brought to our lives. She loved riding horses with dad, playing softball along with many other things. She was attending Chico State, when she died of bacterial meningitis in 1999. Today it is a mandate at most institutions of higher learning that students be vaccinated. Jenny was one of the cases that led to this beneficial requirement that has saved many other lives. She loved riding horses with dad, playing softball and <???>. </p>
 
 <h3 class="normal mt5">Kristina Dunn-Buchanan</h3>
-<img src="https://i1.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/kristina.jpg">
+<%= image_tag ' family/kristina-os.jpg', :class => 'w-100' %>
 <p class="lh-copy measure">
 	The youngest in the family, graduated Cal Poly San Luis Obispo with a BS in Wine & Viticulture in 2005. Kristina and Brian Buchanan married in 2010 and now have two young daughters.  Kristina worked at the winery assisting in the winemaking, givng tours and managing the marketing until her children were born. Today she is not involved in the day to day activities of the winery, however she plays a critical role as the mediator in many of challenges associated in family business. 
 </p>
@@ -33,6 +40,38 @@ title: "The Family"
 
 
 <h3 class="normal mt5">Erin Begerow</h3>
-<img src="https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/DSC_0354.jpg" alt="" data-recalc-dims="1"> 
+<%= image_tag ' family/erin.jpg', :class => 'w-100' %>
 <p class="lh-copy measure">Office manager. She is a native Californian, and a graduate of Pomona College. Erin takes care of all office work, and started working for the Dunn&#8217;s in October of 1994. She and her husband live just down the road from the winery. They have two children, both of whom are in college now. She also coaches the local age group swim team.</p>
 
+
+    </div>
+    <div class="fl w-100 w-50-l ph4">
+
+<%= image_tag ' family/randy-grapes.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/fam-kids.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/randy-lori.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/fam-teens.jpg', :class => 'w-100 pb3' %>
+
+<%= image_tag ' family/randy-truck.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/randy-1.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/randy-mike.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/randy-porch.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/randy-porch-2.jpg', :class => 'w-100 pb3' %>
+
+<%= image_tag ' family/randy-cowboy.jpg', :class => 'w-100 pb3' %>
+
+<%= image_tag ' family/randy-bw.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/randy-vines.jpg', :class => 'w-100 pb3' %>
+
+<%= image_tag ' family/mike-woodpile.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/kristina-cap.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/mike-shop.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/alex.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/adrian.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/mike-tree.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/randy-garden.jpg', :class => 'w-100 pb3' %>
+    </div>
+
+  </div>
+  </div>
+</section>
