--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -27,7 +27,7 @@ hero: "wine/wines-slider.jpg"
       <!--  <p class="i mt0">Napa Valley: Howell Mountain AVA</p> -->
       <p class="lh-copy measure" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that it is hand dipped in red wax.</p>
 			<p class="tc"><%= link_to  'Tasting notes', 'tasting-notes.html', :class => 'dark-blue link underline-hover' %></p>
-			<p class="tc"><%= link_to  'How to remove the red wax', 'how-to-remove-red-wax.html', :class => 'dark-blue link underline-hover' %></p>
+			<p class="tc"><%= link_to  'How to remove the wax', 'how-to-remove-the-wax.html', :class => 'dark-blue link underline-hover' %></p>
 		</div>
 
 		<div class="fl w-100 w-50-l ph4">
