fixed some copy

--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -22,16 +22,14 @@ hero: "family/fam-os.jpg"
 
 <h3 class="normal mt5">Mike Dunn</h3>
 <%= image_tag ' family/mike-os.jpg', :class => 'w-100' %>
-<p class="lh-copy measure">While he calls himself a “cellar grunt”, Mike actually oversees production of the wine, works with the team in the vineyards, and generally manages the overall operation. An interest in experimenting with other varietals lead Mike and his wife Kara to purchase some old vine Petite Sirah from Randy and start their own label <%= linke_to 'Retro Cellars',  "http://www.retrocellars.com", :class="dark-blue link underline-hover" %>. Before becoming a full time wine-maker, Mike pursued his other interests. He graduated from UC Santa Barbara in 1988 with a degree in Anthropology (surfing) and later owned a bike shop in Calistoga. He and Kara have two grown children who are currently on their own paths.  But they wouldn’t be surprised if, like their father, they end up farming grapes on Howell Mountain.</p>
+<p class="lh-copy measure">While he calls himself a “cellar grunt”, Mike actually oversees production of the wine, works with the team in the vineyards, and manages the overall operation. An interest in experimenting with other varietals lead Mike and his wife Kara to purchase some old vine Petite Sirah from Randy and start their own label <%= linke_to 'Retro Cellars',  "http://www.retrocellars.com", :class="dark-blue link underline-hover" %>. Before becoming a full time wine-maker, Mike pursued his other interests. He graduated from UC Santa Barbara in 1988 with a degree in Anthropology (surfing) and later owned a bike shop in Calistoga. He and Kara have two grown children who are currently on their own paths.  But they wouldn’t be surprised if, like their father, they end up farming grapes on Howell Mountain.</p>
 
 <h3 class="normal mt5">Jennifer Dunn</h3>
-<p class="lh-copy measure">It is safe to say, that we are who we are today because of the love Jenny brought to our lives. She loved riding horses with dad, playing softball along with many other things. She was attending Chico State, when she died of bacterial meningitis in 1999. Today it is a mandate at most institutions of higher learning that students be vaccinated. Jenny was one of the cases that led to this beneficial requirement that has saved many other lives. She loved riding horses with dad, playing softball and <???>. </p>
+<p class="lh-copy measure">It is safe to say, that we are who we are today because of the love Jenny brought to our lives. She loved riding horses with dad, playing softball along with many other things. She was attending Chico State, when she died of bacterial meningitis in 1999. Today it is a mandate at most institutions of higher learning that students be vaccinated. Jenny was one of the cases that led to this beneficial requirement that has saved many other lives.</p> 
 
 <h3 class="normal mt5">Kristina Dunn-Buchanan</h3>
 <%= image_tag ' family/kristina-os.jpg', :class => 'w-100' %>
-<p class="lh-copy measure">
-	The youngest in the family, graduated Cal Poly San Luis Obispo with a BS in Wine & Viticulture in 2005. Kristina and Brian Buchanan married in 2010 and now have two young daughters.  Kristina worked at the winery assisting in the winemaking, givng tours and managing the marketing until her children were born. Today she is not involved in the day to day activities of the winery, however she plays a critical role as the mediator in many of challenges associated in family business. 
-</p>
+<p class="lh-copy measure">Marketer, mediator, and now mostly full time mother, Kristina is the youngest of the Dunn children. After graduating Cal Poly San Luis Obispo with a BS in Wine &amp; Viticulture, she returned to Howell Mountain to manage marketing, run hospitality, and resume her natural role as family mediator. These days days she spends most of her time, along with her husband Brian, managing their two young daughters, but she's close by and ready to help out.  
 
 
 <h2 class="normal mt5">The Vineyard Family</h2>
@@ -39,7 +37,7 @@ hero: "family/fam-os.jpg"
 
 <h3 class="normal mt5">Erin Begerow</h3>
 <%= image_tag ' family/erin.jpg', :class => 'w-100' %>
-<p class="lh-copy measure">Office manager. She is a native Californian, and a graduate of Pomona College. Erin takes care of all office work, and started working for the Dunn&#8217;s in October of 1994. She and her husband live just down the road from the winery. They have two children, both of whom are in college now. She also coaches the local age group swim team.</p>
+<p class="lh-copy measure">Office manager. She is a native Californian, and a graduate of Pomona College. Erin takes care of all office work, and started working for the Dunn&#8217;s in October of 1994. She and her husband live just down the road from the winery. They have two children, both of whom are in college now. She also coaches the Waves Aquatics swim team.</p>
 
 
     </div>
