changes to the family page

--- a/source/family2.html.erb
+++ b/source/family2.html.erb
@@ -12,7 +12,7 @@ hero: "family/fam-os.jpg"
       <div class="fl w-100 w-50-l ph4 mb4-l">
 
 
-<h3 class="normal mt0">Randy Dunn</h3>
+<h3 class="normal mt5">Randy Dunn</h3>
 <%= image_tag ' family/randy-os.jpg', :class => 'w-100' %>
 <p class="lh-copy measure">Founder, farmer, activist and winemaking pioneer of Howell Mountain. Randy started his making wine for Charlie Wagner as the first enologist for Caymus Vineyards, and never looked back. Now after all these years, not a lot has changed. More of a farmer, he’s hands on in vineyards most days. His love for Howell Mountain lead him to be instrumental in establishing it as a sub Appellation of the Napa Valley. And if he’s not farming the mountain, he’s mountain biking on it, flying his plane over it, or finding ways to preserve it for future generations. He is happy to be called a dirt-loving hippie, but you’d probably think he’s more of a cowboy.
 
@@ -22,7 +22,7 @@ hero: "family/fam-os.jpg"
 
 <h3 class="normal mt5">Mike Dunn</h3>
 <%= image_tag ' family/mike-os.jpg', :class => 'w-100' %>
-<p class="lh-copy measure">While he calls himself a “cellar grunt”, Mike actually oversees production of the wine, works with the team in the vineyards, and manages the overall operation. An interest in experimenting with other varietals lead Mike and his wife Kara to purchase some old vine Petite Sirah from Randy and start their own label <%= link_to 'Retro Cellars',  'http://www.retrocellars.com', :class=>'dark-blue link underline-hover' %>. Before becoming a full time wine-maker, Mike pursued his other interests. He graduated from UC Santa Barbara in 1988 with a degree in Anthropology (surfing) and later owned a bike shop in Calistoga. He and Kara have two grown children who are currently on their own paths.  But they wouldn’t be surprised if, like their father, they end up farming grapes on Howell Mountain.</p>
+<p class="lh-copy measure">While he calls himself a “cellar grunt”, Mike actually oversees production of the wine, works with the team in the vineyards, and manages the overall operation. An interest in experimenting with other varietals lead Mike and his wife Kara to purchase some old vine Petite Sirah from Randy and start their own label <%= linke_to 'Retro Cellars',  "http://www.retrocellars.com", :class="dark-blue link underline-hover" %>. Before becoming a full time wine-maker, Mike pursued his other interests. He graduated from UC Santa Barbara in 1988 with a degree in Anthropology (surfing) and later owned a bike shop in Calistoga. He and Kara have two grown children who are currently on their own paths.  But they wouldn’t be surprised if, like their father, they end up farming grapes on Howell Mountain.</p>
 
 <h3 class="normal mt5">Jennifer Dunn</h3>
 <p class="lh-copy measure">It is safe to say, that we are who we are today because of the love Jenny brought to our lives. She loved riding horses with dad, playing softball along with many other things. She was attending Chico State, when she died of bacterial meningitis in 1999. Today it is a mandate at most institutions of higher learning that students be vaccinated. Jenny was one of the cases that led to this beneficial requirement that has saved many other lives.</p> 
@@ -43,19 +43,14 @@ hero: "family/fam-os.jpg"
     </div>
     <div class="fl w-100 w-50-l ph4">
 
-<%= image_tag ' family/randy-lori.jpg', :class => 'w-100' %>
-<p class="f5 i mt1 mb4">Randy and Lori</p>
-<%= image_tag ' family/fam-kids.jpg', :class => 'w-100' %>
-<p class="f5 i mt1 mb4">Randy, Lori, Jennifer, and Kristina</p>
-<%= image_tag ' family/fam-teens.jpg', :class => 'w-100' %>
-<%= image_tag ' family/randy-mike.jpg', :class => 'w-100' %>
-<%= image_tag ' family/alex.jpg', :class => 'w-100' %>
-<%= image_tag ' family/adrian.jpg', :class => 'w-100' %>
-
-<!--
-<%= image_tag ' family/randy-1.jpg', :class => 'w-100 pb3' %>
-<%= image_tag ' family/randy-truck.jpg', :class => 'w-100 pb3' %>
 <%= image_tag ' family/randy-grapes.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/fam-kids.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/randy-lori.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/fam-teens.jpg', :class => 'w-100 pb3' %>
+
+<%= image_tag ' family/randy-truck.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/randy-1.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/randy-mike.jpg', :class => 'w-100 pb3' %>
 <%= image_tag ' family/randy-porch.jpg', :class => 'w-100 pb3' %>
 <%= image_tag ' family/randy-porch-2.jpg', :class => 'w-100 pb3' %>
 
@@ -67,9 +62,10 @@ hero: "family/fam-os.jpg"
 <%= image_tag ' family/mike-woodpile.jpg', :class => 'w-100 pb3' %>
 <%= image_tag ' family/kristina-cap.jpg', :class => 'w-100 pb3' %>
 <%= image_tag ' family/mike-shop.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/alex.jpg', :class => 'w-100 pb3' %>
+<%= image_tag ' family/adrian.jpg', :class => 'w-100 pb3' %>
 <%= image_tag ' family/mike-tree.jpg', :class => 'w-100 pb3' %>
 <%= image_tag ' family/randy-garden.jpg', :class => 'w-100 pb3' %>
--->
     </div>
 
   </div>
