--- a/source/story.html.erb
+++ b/source/story.html.erb
@@ -3,119 +3,9 @@ title: "History"
 ---
 
 <section class="mv5 mw8 center">
-
-<h3 class="mt4">1975</h3> 
-<p class="lh-copy measure center">Randy is hired by Caymus as the Enologist</p>
-
-<h3 class="mt4">1978</h3> 
-<p class="lh-copy measure center">Randy and Lori purchase the “Trailer Vineyard” and begin farming 5 ½ acres of Cabernet in their free time and on the weekends. Jenny is born and the family moves into the white house.</p>
-
-<h3 class="mt4">1979</h3>
-<p class="lh-copy measure center">Randy harvests 9 tons of Cabernet Sauvignon from his vineyard and an adjoining vineyard that he manages. He also purchases 3 tons from the Beatty vineyard and produces 660 cases of 750ml’s, 28 cases of magnums and 53 five liter bottles, Dunn Vineyards begins…</p>
-
-<p class="lh-copy measure center i">"The mountain really determined the style of the wine. It became obvious right away that the grapes up here were much more powerful than down on the valley floor. I just made the wine itself the same way we did at Caymus, it just was a more tannic wine due to the place."</p>
-<p class="lh-copy measure center i">"I knew that I wanted to simplify things after my experience at Caymus. I didn’t want to be bottling into the back of a super market truck and didn’t want to be subjugated to the marketing department’s demands. “Keep it simple dummy.""</p>
-
-<h3 class="mt4">1981</h3>
-<p class="lh-copy measure center">The winery is bonded, here in Angwin.</p>
-<p class="lh-copy measure center">Randy and Lori’s second daughter Kristina is born.</p>
-
-<h3 class="mt4">1982</h3>
-
-<p class="lh-copy measure center">(pic of 5L box) made by hand from a fallen Ponderosa Pine. Randy assists the Lamborn Family with their first wine, consults on Bill Smith’s La Jota project with Helen Turley.</p>
-
-<p class="bg-light-silver lh-copy measure center">The 5L boxes were hand made here at the winery from a fallen Ponderosa Pine. Randy makes the first Lamborn Family wine. Randy consults on Bill Smith’s revived La Jota wine with Helen Turley.</p>
-
-<h3 class="mt4">1983</h3>
-<p class="lh-copy measure center">Randy makes the first Grace Family wine at the Caymus winery.</p> 
-<p class="bg-light-silver lh-copy measure center">Randy makes the first Grace Family Cabernet. He had been making wine with this fruit at Caymus as a single vineyard wine.</p>
-
-<h3 class="mt4">1984</h3>
-<p class="lh-copy measure center">ATF approves Howell Mountain AVA in January. The ’81 vintage is bottled and the 5L’s received etched bottles for the first time. Randy made the Livingstone – Moffett wine.</p>
-
-<h3 class="mt4">1985</h3>
-<p class="lh-copy measure center">Randy parts way with Caymus. Construction begins on the brown house. </p>
-
-<h3 class="mt4">1986</h3>
-<p class="lh-copy measure center">The family moves into the brown house. Randy makes the first Pahlmeyer wine after offering to buy Jayson’s fruit. </p>
-
-<h3 class="mt4">1987</h3>
-<p class="lh-copy measure center">Raul Martinez is brought on the assist Randy in the vineyard, he was employee #1 and is still our vineyard manager to this day.</p>
-
-<h3 class="mt4">1988</h3>
-<p class="lh-copy measure center">Mike graduates from UC Santa Barbara</p>  
-
-<h3 class="mt4">1989</h3>
-<p class="lh-copy measure center">The caves are dug. Dunn has more space to store its barrels and Jenny and Kristina get a roller rink!</p>
-
-<h3 class="mt4">1991</h3>
-<p class="lh-copy measure center">Mike marries Kara Pecota. Randy purchases the Park Muscatine Vineyard.</p>
-
-<h3 class="mt4">1994</h3>
-<p class="lh-copy measure center">Mike and Kara bring their first son and the first grandchild into the family as Alex is born.</p>
-
-<h3 class="mt4">1995</h3>
-<p class="lh-copy measure center">Erin Begerow joins the team and takes over the office management and mailing list coordination.</p>
-
-<h3 class="mt4">1996</h3>
-<p class="lh-copy measure center">Jennifer graduates HS</p>
-
-<h3 class="mt4">1997</h3>
-<p class="lh-copy measure center">Mike and Kara have a baby girl, the first granddaughter. Tatyana is born</p>
-
-<h3 class="mt4">1999</h3>
-
-<p class="lh-copy measure center">Mike returns to the winery, working 3 days a week. Kristina graduates from High School. We have our biggest set back ever as Jennifer passes away.</p>
-
-<p class="bg-light-silver lh-copy measure center">Mike returns to help out at the winery the first order of business, building a new crush pad. Jenny passes away. Kristina graduates H.S.</p>
-
-<h3 class="mt4">2001</h3>
-<p class="lh-copy measure center">Randy makes the first vintage of the Palmaz wine here, as they construct their facility. Lori passes her exam and becomes a Master Gardner. Planted the Lake Vineyard and purchased the New Hearth property.</p>
-<p class="lh-copy measure center">Adan Salgado is hired on full time to assist in the vineyard not only is he still a part of the team, but is responsible for waxing the Howell Mountain wine every vintage.</p>
-
-<h3 class="mt4">2003</h3>
-<p class="lh-copy measure center">Randy makes the first vintage of Feather for the Long Shadows project in the Columbia Valley of Washington. Mike buys the old vine Petite Sirah from Randy’s Park Muscatine Vineyard and starts the Retro Cellars label with Kara. </p>
-
-<h3 class="mt4">2004</h3>
-<p class="lh-copy measure center">Mike sells the bike shop and renovations begin on the white house (office). Sentinel Hill is purchased.</p>
-
-<h3 class="mt4">2005</h3>
-<p class="lh-copy measure center">Kristina graduates from Cal Poly. The first class of their Wine and Viticulture program. </p>
-<p class="lh-copy measure center">Rosalio Olivera is hired full time to assist in the vineyard and remains a valuable member of the team today.</p>
-
-<h3 class="mt4">2006</h3>
-<p class="lh-copy measure center">Kristina comes to work full time at the winery. Randy and Lori close on the Wildlake Property</p>
-<p class="lh-copy measure center">Marcos Olivera joins us full time. He is the back bone of the vineyard crew and if Raul ever retires most certainly will take his place.</p>
-
-<h3 class="mt4">2008</h3>
-<p class="lh-copy measure center">Four continous days of 19&deg; lows cut our harvest in half for the year.</p>
-
-
-<h3 class="mt4">2010</h3>
-<p class="lh-copy measure center">Kristina marrie Brian Buchanan</p>
-
-<h3 class="mt4">2011</h3>
-<p class="lh-copy measure center">Our latest harvest ever: we didn't start picking grapes until October 29th.</p>
-
-<h3 class="mt4">2011</h3>
-<p class="lh-copy measure center">SFGate Publish <a class="link" target="_blank" href="http://www.sfgate.com/wine/thirst/article/Randy-Dunn-s-Cabernet-crusade-3813953.php">"Randy Dunn's Cabernet Crusade"</a>.</p>
-
-<h3 class="mt4">2013</h3>
-<p class="lh-copy measure center">Kristina and Brian welcome their first daughter, Taylor, into the world</p>
-
-<h3 class="mt4">2014</h3>
-<p class="lh-copy measure center">Adriaan Foote joins the team as Mike’s assistant in the cellar</p>
-
-<h3 class="mt4">2015</h3>
-<p class="lh-copy measure center">Ashlyn, Kristina and Brian’s second daughter is born.</p>
-<p class="lh-copy measure center">Fernando Olivera Hernandez is hired full time with us</p>
-<p class="lh-copy measure center">Jay McInerney pays a visit to the winery and <a class="link" target="_blank" href="http://www.townandcountrymag.com/leisure/drinks/a4256/jay-mcinerney-june-july-2014/"> writes it up</a>.</p>
-
-<h3 class="mt4">2016</h3>
-<p class="lh-copy measure center">Ben Hiza comes up to assist Mike with bottling the 2013’s and is now assisting with the national distribution, tours and whatever else needs doing.</p>
-
-
-<h3 class="mt4">The Future</h3>
-<p class="lh-copy measure center">We have no intentions of increasing our production or growing the brand. The current size of our farm and its production allows us to be involved in all aspects. If it were any bigger the work would become much more administrative, managerial not to mention the amount of effort to sell the wine would increase exponentially and for us that’s not the fun part.</p>
-
+  <% data.stories.each do |f| %>
+    <h3 class="mt4"><%= f.year %></h3> 
+    <p class="lh-copy measure center"><%= f.story %></p>
+  <% end %>
 </section>
+
