cleanup on wax, place, wine pages

--- a/source/how-to-remove-the-wax.html.erb
+++ b/source/how-to-remove-the-wax.html.erb
@@ -1,5 +1,6 @@
 ---
 title: "How to Remove the Red Wax" 
+hero: "wine/vertical.jpg"
 ---
 <section class="tc">
   <iframe width="853" height="480" src="http://www.youtube.com/embed/ydvf8yq2NOU" frameborder="0" allowfullscreen></iframe>
