--- a/source/place.html.erb
+++ b/source/place.html.erb
@@ -14,7 +14,7 @@ hero: "place/coyote.jpg"
 
 <section class="mv5 mw8 center">
 
-  <%= image_tag 'place/napa-map.jpg', :class => 'w-100' %>
+<img class="w-100" src="http://via.placeholder.com/1400x400?text=Howell+AVA+Map?">
   <div class="center measure">
     <h2 class="normal mt5 mb0">The Mountain</h2>
     <p class="lh-copy">Recognizing the distinctiveness of the wines from Howell Mountain, Randy and some of the other winemakers sought to have the region recogized as a specific sub-region of Napa. Randy photographed the area from his plane and they submitted the application in 1981. In 1983, Howell Mountain became the first sub appelation of the Napa AVA.
@@ -22,6 +22,7 @@ hero: "place/coyote.jpg"
 </section>
 
 <!-- <%= image_tag 'place/side-hill.jpg', :class => 'w-100' %> -->
+
 
 
 <%= image_tag 'place/vineyard-map.png', :class => 'w-100' %>
