--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -25,18 +25,16 @@ hero: "wine/wines-slider.jpg"
 		<div class="fl w-100 w-50-l ph4">
 			<h2 class="normal mt0 tc">Howell Mountain Cabernet</h2>
       <!--  <p class="i mt0">Napa Valley: Howell Mountain AVA</p> -->
-      <p class="lh-copy measure" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that it is hand dipped in red wax.</p>
-			<p class="tc"><%= link_to  'Tasting notes', 'tasting-notes.html', :class => 'dark-blue link underline-hover' %></p>
-			<p class="tc"><%= link_to  'How to remove the wax', 'how-to-remove-the-wax.html', :class => 'dark-blue link underline-hover' %></p>
-		</div>
+      <p class="lh-copy measure" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that it is hand dipped in <%= link_to  'red wax', 'how-to-remove-the-wax.html', :class => 'dark-blue link underline-hover' %> .</p>
+					</div>
 
 		<div class="fl w-100 w-50-l ph4">
 			<h2 class="normal mt0 tc">Napa Valley Cabernet</h2>
 			<p class="lh-copy measure">The Napa Valley wines are a blend of our Howell Mountain fruit and a small quantity of fruit that we purchase from two growers in Coombsville. This valley floor fruit contributes to the wine’s earlier approachability and softer tannic structure.</p>
-			<p class="tc"><%= link_to  'Tasting notes', 'tasting-notes.html', :class => 'dark-blue link underline-hover' %></p>
 		</div>
     </div>
       <p class="lh-copy measure-narrow center tc">Both of our wines are 100% Cabernet Sauvignon aged 32 months in 100% new French oak.</p>
+			<p class="tc"><%= link_to  'Tasting Notes', 'tasting-notes.html', :class => 'dark-blue link underline-hover' %></p>
 </section>
 
    <img src="/images/wine/89-howell.jpg" class="w-100">
@@ -45,14 +43,13 @@ hero: "wine/wines-slider.jpg"
      <div class="mw8 center cf">
        <div class="fl w-100 w-50-l ph4">
          <h2 class="normal mt0 tc">Availability</h2>
-         <p class="lh-copy measure mb0">The wines are offered to our mailing list every fall. Please contact <%= mail_to 'erin@dunnvineyards.com', "Erin", :class => 'dark-blue link underline-hover' %> for any mailing list inquiries. The wines also are available in select retail and restaurant locations across the country.</p>
+         <p class="lh-copy measure mb0">Each fall we offer our latest release to our mailing list. To subscribe to the mailing list or for inquiries about it, please contact <%= mail_to 'erin@dunnvineyards.com', "Erin", :class => 'dark-blue link underline-hover' %>. Our wine is also are available in select retail and restaurant locations across the country.</p>
        </div>
        <div class="fl w-100 w-50-l ph4">
          <h2 class="normal mt0 tc">Library Wines</h2>
-         <p class="lh-copy measure mb0">We are committed to maintaining a library of all the vintages we have produced. While these wines are not available, we do release older vintages of wine to our mailing list on a regular basis.</p>
+         <p class="lh-copy measure mb0">We are committed to maintaining a library of all the vintages we have produced. Though not usually available, we sometimes release older vintages to our mailing list.</p>
        </div>
      </div>
    </section>
 
-<%= image_tag 'wine/vertical.jpg', :class => 'w-100' %>
 
