added pics to fam page

--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -47,10 +47,20 @@ hero: "family/fam-os.jpg"
 <p class="f5 i mt1 mb4">Randy and Lori</p>
 <%= image_tag ' family/fam-kids.jpg', :class => 'w-100' %>
 <p class="f5 i mt1 mb4">Randy, Lori, Jennifer, and Kristina</p>
+<%= image_tag ' family/picnic.jpg', :class => 'w-100' %>
+<p class="f5 i mt1 mb4">A family picnic</p>
+<%= image_tag ' family/girls-boat.jpg', :class => 'w-100' %>
+<p class="f5 i mt1 mb4">The girls in a boat</p>
+<%= image_tag ' family/jenny-tractor.jpg', :class => 'w-100' %>
+<p class="f5 i mt1 mb4">Jenny</p>
 <%= image_tag ' family/fam-teens.jpg', :class => 'w-100' %>
+<p class="f5 i mt1 mb4">Jenny</p>
 <%= image_tag ' family/randy-mike.jpg', :class => 'w-100' %>
+<p class="f5 i mt1 mb4">Randy and Mike circa ?</p>
 <%= image_tag ' family/alex.jpg', :class => 'w-100' %>
+<p class="f5 i mt1 mb4">Alex Dunn</p>
 <%= image_tag ' family/adrian.jpg', :class => 'w-100' %>
+<p class="f5 i mt1 mb4">Adrian</p>
 
 <!--
 <%= image_tag ' family/randy-1.jpg', :class => 'w-100 pb3' %>
