--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -54,7 +54,7 @@ hero: "family/fam-os.jpg"
 <%= image_tag ' family/jenny-tractor.jpg', :class => 'w-100' %>
 <p class="f5 i mt1 mb4">Jenny</p>
 <%= image_tag ' family/fam-teens.jpg', :class => 'w-100' %>
-<p class="f5 i mt1 mb4">Jenny</p>
+<p class="f5 i mt1 mb4">Randy, Lori, Mike, Kristina</p>
 <%= image_tag ' family/randy-mike.jpg', :class => 'w-100' %>
 <p class="f5 i mt1 mb4">Randy and Mike circa ?</p>
 <%= image_tag ' family/alex.jpg', :class => 'w-100' %>
